kustomizations/epp-client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epp-client
  namespace: journal
spec:
  replicas: ${replicas:-1}
  template:
    spec:
      nodeSelector:
        kubernetes.io/arch: amd64
      containers:
      - name: epp-client
        image: ghcr.io/elifesciences/epp-client:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
          failureThreshold: 10
          timeoutSeconds: 10
