kustomizations/epp-client/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: epp-client-web
spec:
  type: ClusterIP
  ports:
  - port: 3000
    protocol: TCP
