kustomizations/epp-client/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epp-client
  annotations:
    cert-manager.io/cluster-issuer: "${cert_manager_issuer}"
spec:
  ingressClassName: traefik
  rules:
  - host: ${hostname}
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: epp-client-web
            port:
              number: 3000
  tls:
  - hosts:
    - ${hostname}
    secretName: epp-client-tls
